[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/text_systems/conv_text.gd" type="Script" id=1]
[ext_resource path="res://fonts/Modeseven.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/Modeseven_theme.tres" type="Theme" id=3]
[ext_resource path="res://style_box_flat/dark_white.tres" type="StyleBox" id=4]
[ext_resource path="res://style_box_flat/dark_red.tres" type="StyleBox" id=5]
[ext_resource path="res://scripts/text_systems/conv_master.gd" type="Script" id=6]
[ext_resource path="res://style_box_flat/dark_yellow.tres" type="StyleBox" id=7]
[ext_resource path="res://scripts/text_systems/enum_system.gd" type="Script" id=8]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/Modeseven-L3n5.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[node name="conv" type="Node"]
script = ExtResource( 6 )

[node name="vbox" type="VBoxContainer" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -76.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="conv_title" type="PanelContainer" parent="vbox"]
margin_right = 76.0
margin_bottom = 20.0
custom_styles/panel = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hbox" type="HBoxContainer" parent="vbox/conv_title"]
margin_right = 76.0
margin_bottom = 20.0

[node name="title" type="Label" parent="vbox/conv_title/hbox"]
margin_right = 60.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.219608, 0.227451, 0.258824, 1 )
text = "Ttitle"
align = 1
valign = 1

[node name="minimize" type="Button" parent="vbox/conv_title/hbox"]
margin_left = 64.0
margin_right = 76.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="conv_panel" type="PanelContainer" parent="vbox"]
margin_top = 24.0
margin_right = 76.0
margin_bottom = 813.0
size_flags_vertical = 7
size_flags_stretch_ratio = 3.0
custom_styles/panel = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="conv_margin" type="MarginContainer" parent="vbox/conv_panel"]
margin_right = 76.0
margin_bottom = 789.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="conv_text" type="RichTextLabel" parent="vbox/conv_panel/conv_margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 66.0
margin_bottom = 779.0
size_flags_stretch_ratio = 20.0
custom_fonts/normal_font = SubResource( 2 )
text = "NULLa plant.
		You feel its thick, oily leaves with your fingers, and continue down its stem until you reach the moist and warm dirt in the planter.
		Your hands wander further across the ceramic, as if mesmerized, eventually touching the cold, metal floor.
	Snapping out of the spell this houseplant had you under, you come across a plastic [url=A]spray bottle[/url]. $LOC.003.Disc+=1
	(
1 Go back to the table. $LOC.003.Disc+=1 $LOC.003-=1 $LOC.002+=1 ; 
2 Look for the door out to the hall. $LOC.003.Disc+=1 $LOC.003-=1 $LOC.092+=1 ;			
3 Go to the bedroom. $LOC.003.Disc+=1 $LOC.003-=1 $LOC.001+=1 ;
A A spray bottle could be useful. Fill it with the right liquid, and it can we a weapon, even. $ $tA+=1 $LOC.003.Sprayer+=1 ;
		)
	{if tA > 0 & Item.Init = 0:
			@9 That assumes you have “the right liquid” – and a need for a “weapon”. For now, let’s just make a note.
"
scroll_following = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hyper" type="PopupDialog" parent="vbox/conv_panel/conv_margin/conv_text"]
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hyper_text" type="Label" parent="vbox/conv_panel/conv_margin/conv_text/hyper"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.943863
margin_bottom = -0.943863
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource( 3 )
text = "0123456789"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timer_pos" type="Timer" parent="vbox/conv_panel/conv_margin/conv_text/hyper/hyper_text"]
one_shot = true

[node name="timer_vis" type="Timer" parent="vbox/conv_panel/conv_margin/conv_text/hyper/hyper_text"]
one_shot = true

[node name="timer_write" type="Timer" parent="vbox/conv_panel/conv_margin/conv_text"]
one_shot = true

[node name="enum" type="PanelContainer" parent="vbox"]
margin_top = 817.0
margin_right = 76.0
margin_bottom = 1080.0
size_flags_vertical = 11
custom_styles/panel = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enum_margin" type="MarginContainer" parent="vbox/enum"]
margin_right = 76.0
margin_bottom = 263.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="enum_text" type="RichTextLabel" parent="vbox/enum/enum_margin"]
margin_left = 20.0
margin_top = 20.0
margin_right = 56.0
margin_bottom = 243.0
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "a plant.
		You feel its thick, oily leaves with your fingers, and continue down its stem until you reach the moist and warm dirt in the planter.
		Your hands wander further across the ceramic, as if mesmerized, eventually touching the cold, metal floor.
	Snapping out of the spell this houseplant had you under, you come across a plastic [url=A]spray bottle[/url]. $LOC.003.Disc+=1
	(
1 Go back to the table. $LOC.003.Disc+=1 $LOC.003-=1 $LOC.002+=1 ; 
2 Look for the door out to the hall. $LOC.003.Disc+=1 $LOC.003-=1 $LOC.092+=1 ;			
3 Go to the bedroom. $LOC.003.Disc+=1 $LOC.003-=1 $LOC.001+=1 ;
A A spray bottle could be useful. Fill it with the right liquid, and it can we a weapon, even. $ $tA+=1 $LOC.003.Sprayer+=1 ;
		)
	{if tA > 0 & Item.Init = 0:
			@9 That assumes you have “the right liquid” – and a need for a “weapon”. For now, let’s just make a note.
"
script = ExtResource( 8 )
